Fixed gap in searchbar

--- a/go-packing-project/src/components/date-range/DateRange.css
+++ b/go-packing-project/src/components/date-range/DateRange.css
@@ -1,4 +1,8 @@
 
+.DateRange {
+  background-color: white;
+}
+
 .DateRangePickerInput_arrow {
     display: none !important;
 }
