--- a/go-packing-project/src/pages/Home.css
+++ b/go-packing-project/src/pages/Home.css
@@ -54,13 +54,14 @@ h1 {
 
 .location-border  {
   width: 25%;
-  border-right: 0.5px solid black;
-
+  border-right: 0.5px;
+  border-radius: 25px 15px 25px 25px;
 }
 
 .date-border {
   width: 25%;
   border-right: 0.5px solid black;
+  border-left: 0.5px solid black;
   height: 50px !important;
 }
 
